# pydantic-ai-fastapi-nono

./: .gitignore  README.md  pyproject.toml
src/chat_app/: __init__.py  chat_app.html  chat_app.py  chat_app.ts  cli.py
